--- a/restaurant/src/main/resources/static/layuiadmin/tpl/system/theme.html
+++ b/restaurant/src/main/resources/static/layuiadmin/tpl/system/theme.html
@@ -8,7 +8,7 @@
   }}
 
   <div class="layui-card-header">
-    配色方案
+    Color scheme
   </div>
   <div class="layui-card-body layadmin-setTheme">
     <ul class="layadmin-setTheme-color">
